<resources>
    <string name="app_name">MemoPills</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="inicia_sesion">Inicia sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrese_para_empezar_a_recordarle_o_inicie_sesion_en_caso_de_tener_cuenta">Regístrese para empezar a recordarle o inicie sesion en caso de tener cuenta.</string>
    <string name="registro">Registro</string>
    <string name="apellidos">Apellidos</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="edad">Edad</string>
    <string name="nombre">Nombre</string>
    <string name="ya_se_ha_registrado_inicie_sesion_aqui">¿Ya se ha registrado? Inicie sesion aqui</string>
    <string name="email">Email</string>
    <string name="para_iniciar_sesion_con_la_cuenta_de_otro_movil_escanee_el_codigo_qr_del_otro_movil">Para iniciar sesion con la cuenta de otro movil escanee el codigo qr del otro movil.</string>
    <string name="textview">TextView</string>
    <string name="quiere_iniciar_cuenta_desde_la_cuenta_de_otro_movil_pulse_aqui">¿Quiere iniciar cuenta desde la cuenta de otro movil? Pulse aqui</string>
    <string name="mantener_la_sesion_iniciada">Mantener la sesion iniciada</string>
    <string name="prefStatus"></string>
    <string name="title_activity_principal">Principal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main123123">MainActivity123123</string>
    <string name="title_activity_fghgfhfgh">fghgfhfgh</string>
    <string name="home">Home</string>
    <string name="string_home" />
    <string name="string_string_home">home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registro_de_medicaci_n">Registro de medicación</string>
    <string name="gramos">Gramos</string>
    <string name="nombre_de_medicacion">Nombre de medicacion</string>
    <string name="cada_cuanto_tiempo">¿Cada cuanto tiempo?</string>
    <string name="introduzca_los_datos_de_la_medicaci_n_que_quiera_que_sea_recordada_a_adiendo_informacion_sobre_la_cantidad_en_gramos_y_la_periodicidad_del_mismo">Introduzca los datos de la medicación que quiera que sea recordada añadiendo informacion sobre la cantidad en gramos y la periodicidad del mismo.</string>
</resources>